--- a/US-PDS-00062/Document US-PDS-00062 - attachments_R24_10/US-PDS-00062-html - kinetic/index.html
+++ b/US-PDS-00062/Document US-PDS-00062 - attachments_R24_10/US-PDS-00062-html - kinetic/index.html
@@ -3404,11 +3404,11 @@ class="" style="vertical-align:top;width:570px;"
                     align="center" valign="middle" height="68"
                     style="border:0px;width:620px;padding:0px 20px 0px 20px;background-color: #EFEFEF;">
                     <a href="" target="_blank" alias="Learn more about clinical data for KEYTRUDA QLEX"><img
-                        class="desktop_img" src="./Images/img5.png" title="" alt="image" width="100%" border="0"
+                        class="desktop_img" src="https://adopsstorageaccount1.blob.core.windows.net/emailerimages/UCBA0032_20/img5.png" title="" alt="image" width="100%" border="0"
                         style="display:block;font-size:6px;line-height:6px;max-width:100%;color:#58595B;width:620px;"></a>
                     <!--[if !mso] -->
                     <a href="" target="_blank" alias="Learn more about clinical data for KEYTRUDA QLEX"><img
-                        class="mobile_img" src="./Images/img5-mob.png" title="" alt="image"
+                        class="mobile_img" src="https://adopsstorageaccount1.blob.core.windows.net/emailerimages/UCBA0032_20/img5-mob.png" title="" alt="image"
                         style="font-size:6px;line-height:6px;max-width:100%;display: none;color:#58595B;" width="100%"
                         border="0"></a>
                     <!--[endif]-->
@@ -3448,7 +3448,7 @@ class="" style="vertical-align:top;width:570px;"
                                           <td class="cell display_block mobile__align--left h-auto" align="center"
                                             valign="top"
                                             style="padding:0px 10px 20px 10px;margin:0 auto;text-align: center;">
-                                            <img class="" src="./Images/injection.png" title="" alt="image" width="115"
+                                            <img class="" src="https://adopsstorageaccount1.blob.core.windows.net/emailerimages/UCBA0032_20/injection.png" title="" alt="image" width="115"
                                               border="0"
                                               style="display:block; max-width:100%;font-size: 5px;line-height: 5px;color:#58595B;text-align: center;margin:0 auto;">
 
